fixed home page banner issues

--- a/assets/section-main-product.css
+++ b/assets/section-main-product.css
@@ -247,6 +247,8 @@ border: 0.1rem solid rgb(var(--color-foreground));
 
 .product-form__input .form__label {
   padding-left: 0;
+  color: rgba(var(--color-foreground));
+  font-size: 1.8rem;
 }
 
 .product-form__input .select {
