--- a/sections/cstm-header.liquid
+++ b/sections/cstm-header.liquid
@@ -55,7 +55,7 @@
     .list-menu--inline {
         display: inline-flex;
         justify-content: center;
-        gap: 10px;
+        gap: calc(10px + (45 - 10) * ((100vw - 992px) / (1920 - 992)));
     }
 
     summary.list-menu__item {
