--- a/sections/related-products.liquid
+++ b/sections/related-products.liquid
@@ -32,9 +32,9 @@
     overflow: hidden;
     position: relative;
     }
-
-    .related-products-swiper .swiper-wrapper {
+  .related-products-swiper .swiper-wrapper {
     display: flex;
+    padding-left: 0;
     }
 
     .related-products-swiper .swiper-slide {
@@ -50,7 +50,6 @@
     padding: 17px;
     cursor: pointer;
     transition: all 0.3s ease;
-    border-radius: 4px;
     }
 
     .related-products-header .prev-next-button .item-prev:hover,
