--- a/sections/choose-your-action.liquid
+++ b/sections/choose-your-action.liquid
@@ -187,8 +187,15 @@
             gap: 20px;
     }
 
-    .choose-action-right{
-            background-color:rgba(230, 230, 230, 0.16);
+    .choose-action-right:before {
+            background-color: #f9f9f9;
+            content: '';
+            position: absolute;
+            height: 100%;
+            right: 0;
+            z-index: -1;
+            top: 0;
+            width: 50%;
     }
 
     .choose-action-right .action-image-set img {
