related-product design change as same as recommended-product.liquid

--- a/assets/section-related-products.css
+++ b/assets/section-related-products.css
@@ -1,7 +1,11 @@
 .related-products {
-  display: block;
+    display: block;
 }
 
 .related-products__heading {
-  margin: 0 0 3rem;
+    margin: 0 0 3rem;
+}
+
+.thumbnail-wrapper.show-all .thumbnail-image-wrapper {
+    display: flex !important;
 }
