--- a/snippets/collection-list.liquid
+++ b/snippets/collection-list.liquid
@@ -172,8 +172,8 @@
           position: relative;
             overflow: hidden;
         }
-        .swiper-button-prev,
-        .swiper-button-next {
+        .swiper_collection .swiper-button-prev,
+        .swiper_collection .swiper-button-next {
                 color: #fff;
                 background: #000;
                 position: absolute;
@@ -184,15 +184,15 @@
                 width: 44px;
                 height: 44px;
             }
-            .swiper-button-prev:after,
-            .swiper-button-next:after {
+            .swiper_collection .swiper-button-prev:after,
+            .swiper_collection .swiper-button-next:after {
                font-size: 20px;
             }
             .swiper-button-prev {
                 left: 0;
             }
 
-            .swiper-button-next {
+            .swiper_collection .swiper-button-next {
                 right: 0;
             }
     .collection-list-container .collection-list {
@@ -201,8 +201,8 @@
             }
     }
      @media screen and (max-width: 992px){
-     .swiper-button-prev,
-     .swiper-button-next {
+     .swiper_collection .swiper-button-prev,
+     .swiper_collection .swiper-button-next {
              display: none;
              }
         .collection-list-container .collection-list {
