--- a/snippets/header-mega-menu.liquid
+++ b/snippets/header-mega-menu.liquid
@@ -192,8 +192,9 @@
                                         class="mega-menu__content color-{{ section.settings.menu_color_scheme }} gradient motion-reduce global-settings-popup"
                                         tabindex="-1"
                                 >
-                                    {% render 'header-mega-menu-content', link: link %}
-
+                                    <div class="mega-menu-bg">
+                                        {% render 'header-mega-menu-content', link: link %}
+                                    </div>
                                 </div>
                             </details>
                         </header-menu>
