filter icon replace on plp,add filter css

--- a/assets/component-facets.css
+++ b/assets/component-facets.css
@@ -718,7 +718,22 @@ button.facets__button {
 }
 .sp-fliter .active-facets {
   flex-wrap: nowrap;
+  overflow: auto;
+  padding-bottom: 5px;
 }
+.sp-fliter .active-facets::-webkit-scrollbar {
+  height: 5px;
+}
+
+.sp-fliter .active-facets::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+.sp-fliter .active-facets::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 10px;
+}
+
 .sp-fliter .active-facets__button {
   align-items: center;
   margin-top: 0;
@@ -767,7 +782,8 @@ span.active-facets__button-inner:after {
 }
 
 .sp-fliter .active-facets__button-wrapper * {
-  font-size: 1rem;
+  font-size: 1.2rem;
+  min-width: max-content;
 }
 
 @media screen and () {
@@ -786,10 +802,6 @@ span.active-facets__button-inner:after {
 }
 
 @media screen and (max-width: 992px) {
-  .active-facets {
-    margin: 0 -1.2rem -1.2rem;
-  }
-
   .active-facets__button,
   .active-facets__button-remove {
     margin: 0;
