--- a/sections/related-products.liquid
+++ b/sections/related-products.liquid
@@ -74,6 +74,7 @@
     justify-content: space-between;
     align-items: center;
     margin-bottom: 20px;
+    position: relative;
     }
 
     .related-products-header .prev-next-button {
