--- a/assets/base.css
+++ b/assets/base.css
@@ -3087,7 +3087,7 @@ details[open] > .header__submenu {
 }
 
 .header__menu-item:hover {
-    color: rgb(var(--color-foreground));
+    color: #bf9067;
 }
 
 .header__menu-item span {
@@ -3098,15 +3098,6 @@ details[open] > .header__submenu {
     text-decoration: underline;
     text-underline-offset: 0.3rem;
 }
-
-details[open] > .header__menu-item {
-    text-decoration: underline;
-}
-
-details[open]:hover > .header__menu-item {
-    text-decoration-thickness: 0.2rem;
-}
-
 details[open] > .header__menu-item .icon-caret {
     transform: rotate(180deg);
 }
