--- a/sections/cstm-header.liquid
+++ b/sections/cstm-header.liquid
@@ -44,6 +44,8 @@
 
     .menu-drawer-container {
         display: flex;
+        height: 100%;
+        align-items: anchor-center;
     }
 
     .list-menu {
@@ -56,6 +58,7 @@
         display: inline-flex;
         justify-content: center;
         gap: calc(10px + (45 - 10) * ((100vw - 992px) / (1920 - 992)));
+        height: 100%;
     }
 
     summary.list-menu__item {
